@@ -64,6 +64,14 @@
   <a href="older-versions.html">older versions</a>.
 </p>
 
+<h2>Sponsors</h2>
+
+Thanks go <a href="http://www.vt.edu">Virginia Tech</a> and
+<a href="http://www.linuxaudio.org">linuxaudio.org</a> for sponsoring
+our bandwidth.
+<p>
+<img src="http://lau.linuxaudio.org/images/VTlogo_ITF.gif">
+<img src="http://linuxaudio.org/en/linuxaudio.png" width="250">
 
 
 <h2>Notes</h2>
